--- a/_sass/template/components/_component--breadcrumbs.scss
+++ b/_sass/template/components/_component--breadcrumbs.scss
@@ -22,3 +22,39 @@
 	color: color(blue, XXXX);
 	text-decoration-color: color(blue, XXX);
 }
+
+
+.theme--cyan #breadcrumbs,
+.theme--cyan #breadcrumbs a {
+	color: color(blue, XXXXX);
+	text-decoration-color: color(blue, XXX);
+}
+
+
+.theme--dark #breadcrumbs,
+.theme--dark #breadcrumbs a {
+	color: color(green, XX);
+	text-decoration-color: color(green, XXX);
+}
+
+
+.theme--warm #breadcrumbs,
+.theme--warm #breadcrumbs a {
+	color: color(warm, XXX);
+	text-decoration-color: color(warm, XXXX);
+}
+
+
+.theme--green #breadcrumbs,
+.theme--green #breadcrumbs a {
+	color: color(green, X);
+	text-decoration-color: color(blue, XX);
+ }
+
+
+.theme--grey #breadcrumbs,
+.theme--grey #breadcrumbs a {
+	color: color(blue, XXXX);
+	text-decoration-color: color(blue, XXX);
+}
+
