--- a/_sass/template/components/_component--home.scss
+++ b/_sass/template/components/_component--home.scss
@@ -309,7 +309,7 @@
 
 	.toc-highlight {
 		margin-top: bl(2); //8px
-		@include stack(sm);
+		@include stack(md);
 	}
 
 	.toc-highlight .title,
